--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.3.0
 Django==4.2.6
+django-enumfield==3.1
 djangorestframework==3.14.0
 idna==3.4
 install==1.3.5
